# dynamic-allocation-macro-fmp

./: .gitignore  README.md  main.py  pyproject.toml
configs/: run_pipeline_config.json
scripts/: Pre_script_LC.py  format_wrds_data_first_time.py  tmp.py
src/dynamic-allocation-macro-fmp/backtesting/: portfolio.py
src/dynamic-allocation-macro-fmp/utils/: files_utils.py  s3_utils.py
src/dynamic_allocation_macro_fmp/analytics/: analytics.py
src/dynamic_allocation_macro_fmp/backtesting/: strategies.py
src/dynamic_allocation_macro_fmp/building_fmp/: fmp.py
src/dynamic_allocation_macro_fmp/data/: data.py
src/dynamic_allocation_macro_fmp/dynamic_allocation/: dynamic_allocation.py
src/dynamic_allocation_macro_fmp/fmp/: fmp.py
src/dynamic_allocation_macro_fmp/forecasting/: features_engineering.py  features_selection.py  models.py  models_orchestrator.py
src/dynamic_allocation_macro_fmp/forecasting/schemes/: base.py  expanding.py  static.py
src/dynamic_allocation_macro_fmp/utils/: analytics.py  config.py  s3_utils.py  utils.py  vizu.py
